win -> macも実装完了

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <input class="pure-input-1" type="text" id="windowsPath" placeholder="\\server\path\to\file (Windows path)">
       <input class="pure-input-1" type="text" id="mountURI" placeholder="smb://server/path (Mac mount URI)">
       <input class="pure-input-1" type="text" id="macPath" placeholder="/Volumes/MountPoint/path/to/file (Mac path)">
-      <input class="pure-input-1" type="text" name="userName" placeholder="UserName">
+      <input class="pure-input-1" type="text" id="userName" placeholder="UserName">
       <button class="pure-button" id="openButton">open</button>
     </form>
   </body>
