ボタンを押すと入力内容が消える問題を修正した

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <input class="pure-input-1" type="text" id="mountURI" placeholder="smb://server/path (Mac mount URI)">
       <input class="pure-input-1" type="text" id="macPath" placeholder="/Volumes/MountPoint/path/to/file (Mac path)">
       <input class="pure-input-1" type="text" id="userName" placeholder="UserName">
-      <button class="pure-button" id="openButton">open</button>
+      <button class="pure-button" type="button" id="openButton">open</button>
     </form>
   </body>
 </html>
